Afficher les information profil user

--- a/src/app/components/header-user/header-user.component.html
+++ b/src/app/components/header-user/header-user.component.html
@@ -11,7 +11,7 @@
     </ul>
     <ul class="header-links pull-right list-inline mb-0">
         <li class="list-inline-item"><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-        <li class="list-inline-item"><a routerLink="/profile"><i class="fa fa-user-o"></i> Mon Compte</a></li>
+        <li class="list-inline-item"><a routerLink="/profileBorrower"><i class="fa fa-user-o"></i> Mon Compte</a></li>
         <!-- Show only if logged in -->
         <li *ngIf="userEmail" class="list-inline-item d-flex align-items-center">
             <img [src]="userImageUrl" alt="User" class="user-avatar rounded-circle me-2" width="32" height="32">
