--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -6,7 +6,7 @@
         <h3>{{ item.name }}</h3>
         <p>Propriétaire : {{ item.owner.name }} </p>
         <p>Prix : {{ item.price }} €</p>
-        <button (click)="createNewContract(item)">Valider</button>
+        <button >Valider</button>
     </div>
     </div>
 </div>
