--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -10,7 +10,7 @@
           <p class="card-text">{{ item.description }}</p>
           <div class="item-details">
             <p><strong>Category:</strong> {{ item.category }}</p>
-            <p><strong>Owner:</strong> {{ item.owner.name }} ({{ item.owner.email }})</p>
+            <p><strong>Owner:</strong>  ({{ item.owner.email }})</p> 
             <p>
               <strong>Price:</strong>
               <span [class.text-decoration-line-through]="activeDiscounts[item.id]">
