--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -10,11 +10,10 @@
                     <li><a href="#">Hot Deals</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Laptops</a></li>
-                    <li><a href="#">Smartphones</a></li>
-                    <li><a href="#">Cameras</a></li>
                     <li><a href="#">Accessories</a></li>
                     <li><a href="/listFeedback">Feedbacks</a></li>
                     <li><a href="/addFeedback">Add Feedback</a></li>
+                    <li><a href="/specificFeedback">My Feedbacks</a></li>
 
                 </ul>
                 <!-- /NAV -->
