--- a/src/app/components/sidebar/sidebar-back.component.html
+++ b/src/app/components/sidebar/sidebar-back.component.html
@@ -109,27 +109,59 @@
         <i class="menu-arrow"></i>
       </a>
     </li>
-    <li class="nav-item menu-items">
-      <a class="nav-link" href="../../pages/charts/chartjs.html">
-        <span class="menu-icon">
-          <i class="mdi mdi-chart-bar"></i>
-        </span>
-        <span class="menu-title">Feedback Charts</span>
-        <i class="menu-arrow"></i>
-      </a>
-      <ul class="nav flex-column sub-menu">
-        <li class="nav-item">
-          <a class="nav-link" href="/feedbackschart">
-            Reacts
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/analysechart">
-            Analyse de sentiments
-          </a>
-        </li>
-      </ul>
-    </li>
+    <!--Feedbackkkkkkkksss wallaaaaaaaaaaaaaaaa-->
+   <!-- Feedbacks Menu -->
+<li class="nav-item menu-items">
+  <a class="nav-link" data-bs-toggle="collapse" href="#feedbacks" aria-expanded="false" aria-controls="feedbacks">
+    <span class="menu-icon">
+      <i class="mdi mdi-message-text"></i>
+    </span>
+    <span class="menu-title">Feedbacks</span>
+    <i class="menu-arrow"></i>
+  </a>
+  <div class="collapse" id="feedbacks">
+    <ul class="nav flex-column sub-menu">
+      <li class="nav-item">
+        <a class="nav-link" href="/list-Feedback">
+          List Feedback
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/reported-Feedbacks">
+          Reported Feedback
+        </a>
+      </li>
+    </ul>
+  </div>
+</li>
+
+<!-- Feedback Charts Menu -->
+<li class="nav-item menu-items">
+  <a class="nav-link" data-bs-toggle="collapse" href="#feedbackCharts" aria-expanded="false" aria-controls="feedbackCharts">
+    <span class="menu-icon">
+      <i class="mdi mdi-chart-bar"></i>
+    </span>
+    <span class="menu-title">Feedback Charts</span>
+    <i class="menu-arrow"></i>
+  </a>
+  <div class="collapse" id="feedbackCharts">
+    <ul class="nav flex-column sub-menu">
+      <li class="nav-item">
+        <a class="nav-link" href="/feedbackschart">
+          Reacts
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/analysechart">
+          Analyse de sentiments
+        </a>
+      </li>
+    </ul>
+  </div>
+</li>
+
+
+    <!--Feegvhbj-->
     
     <li class="nav-item menu-items">
       <a class="nav-link" href="../../pages/icons/font-awesome.html">
