--- a/src/app/components/Feedback/feedback-list/feedback-list.component.css
+++ b/src/app/components/Feedback/feedback-list/feedback-list.component.css
@@ -1009,3 +1009,11 @@ margin-top: 20px;
   margin-right: 4px;
   font-size: 16px;
 }
+.user-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+  border: 2px solid #ddd;
+}
